k8s/backend-dp.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: chatapp-backend
          image: rimandeepsingh/chatapp-backend:latest
          ports:
            - containerPort: 5001
