k8s/frontend-dp.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: chatapp-frontend
          image: rimandeepsingh/chatapp-frontend:latest
          ports:
            - containerPort: 80
