k8s/mongodb-dp.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-volume-claim
              mountPath: /data
      volumes:
        - name: mongodb-persistent-volume-claim
          persistentVolumeClaim:
            claimName: mongodb-persistent-volume-claim
