k8s/backend-service.yml
#backend service
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: chatapp
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
