k8s/mongodb-service.yml
#mongodb service
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
  namespace: chatapp
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
